--- a/cursova/cursova.csproj
+++ b/cursova/cursova.csproj
@@ -73,6 +73,12 @@
     <Compile Include="ShowRatingWindow.Designer.cs">
       <DependentUpon>ShowRatingWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="ShowSubjectsWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ShowSubjectsWindow.Designer.cs">
+      <DependentUpon>ShowSubjectsWindow.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="EditAbiturientWindow.resx">
       <DependentUpon>EditAbiturientWindow.cs</DependentUpon>
     </EmbeddedResource>
@@ -93,6 +99,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ShowRatingWindow.resx">
       <DependentUpon>ShowRatingWindow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ShowSubjectsWindow.resx">
+      <DependentUpon>ShowSubjectsWindow.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
